--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="d-flex align-items-center justify-content-center mt-5">
         <img src="https://irimiaionut.github.io/Animated-Icons-SVG/resources/essential/success.svg" width="150px" height="150px">
     </div>
-    <div class="text-center m-5">
-        <b>The payment has been successfully processed. Kindly proceed to the booking page, select the "Payment Success" option, and confirm your reservation.</b>
+    <div class="col-12 text-center">
+        <p><b>The payment has been successfully processed. Kindly proceed to the booking page, select the "Payment Success" option, and confirm your reservation.</b></p>
 </div>
    </div>
 </body>
